--- a/example.html
+++ b/example.html
@@ -1,7 +1,15 @@
-<script type="module" src="./shiki-component.js"></script>
+<script type="module" src="https://unpkg.com/shiki-component@1"></script>
 
-<shiki-component lang="html" theme="rose-pine">
-	<template>
-		<h1>Your Project here</h1>
-	</template>
+<shiki-component lang="html" theme="night-owl">
+  <template>
+    <!-- interesting code -->
+    <h1>Your Project Here!</h1>
+  </template>
+</shiki-component>
+
+<shiki-component lang="js" theme="rose-pine">
+  <template>
+    // super simple to add to any project
+    const myLabel = 'New Project Here!'
+  </template>
 </shiki-component>
